Add a navy-blue left navigation to the desktop client, mirroring the web app's dashboard sidebar, and document the desktop client's architecture and development history.
sidebar.fxml/SidebarController is a single shared component (fx:include'd into topics, topic-threads, and thread-detail) rather than three copies: brand header, a Discussion Forum nav item, the logged-in user's name/role, and Logout — which now lives only here instead of being duplicated per screen. Router gained a currentUser holder (set on login, read by the sidebar) and now applies a shared app.css to every scene it loads.

desktop/README.md documents the client's architecture (Router/ApiClient/models/controllers), how the shared sidebar and navigation work, build/run instructions including a no-Maven fallback, and a running development log. The root README links to it and gained the same no-Maven build steps. Also drops the two build-artifact files under desktop/target/ that were still tracked from before desktop/.gitignore existed.